--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "1.12.4",
     "html5shiv": "3.7.3",
     "requirejs": "latest",
+    "require-css": "^0.1.10",
     "respond": "latest",
     "leaflet": "^1.3.1",
     "font-awesome": "^5.1.0",
