--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,17 @@
   "name": "pipe-acc",
   "description": "",
   "main": "index.js",
-  "authors": ["fyl080801 <fyl080801@hotmail.com>"],
+  "authors": [
+    "fyl080801 <fyl080801@hotmail.com>"
+  ],
   "license": "ISC",
-  "ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
     "angular": "1.2.32",
     "angular-bootstrap": "0.12.0",
@@ -24,6 +32,8 @@
     "angular-tree-control": "0.2.25",
     "angular-schema-form": "^0.8.13",
     "angular-schema-form-bootstrap": "^0.2.0",
-    "angular-signalr-hub": "^1.6.3"
+    "angular-signalr-hub": "^1.6.3",
+    "angular-leaflet-directive": "^0.10.0",
+    "Proj4Leaflet": "proj4leaflet#^1.0.2"
   }
 }
