--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/angular-ui-bootstrap": "^0.13.46",
     "@types/angular-ui-router": "^1.1.40",
     "@types/jquery": "^3.3.1",
+    "@types/jquery.nicescroll": "^3.7.0",
     "@types/leaflet": "^1.2.8",
     "@types/popper.js": "^1.11.0",
     "@types/proj4leaflet": "^1.0.5",
