--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pipe-acc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "webserver": "gulp webserver",
     "tsc": "tsc --watch -p tsconfig.json",
@@ -30,6 +30,7 @@
     "bower": "^1.8.4",
     "codelyzer": "~4.2.1",
     "concurrently": "^3.5.1",
+    "electron": "^2.0.5",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
