--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,9 @@
     "angular-leaflet-directive": "^0.10.0",
     "Proj4Leaflet": "proj4leaflet#^1.0.2",
     "jquery.nicescroll": "^3.7.6",
-    "angular-ui-tree": "^2.22.6"
+    "angular-ui-tree": "^2.22.6",
+    "jquery-ui": "^1.12.1",
+    "angular-drag-drop": "^2.1.3",
+    "ngDraggable": "^0.1.11"
   }
 }
