--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
     "angular-ui-tree": "^2.22.6",
     "jquery-ui": "^1.12.1",
     "ngDraggable": "^0.1.11",
-    "ui-leaflet": "^2.0.0"
+    "ui-leaflet": "^2.0.0",
+    "Leaflet.DomMarkers": "*"
   }
 }
