--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jquery": "^3.3.1",
     "@types/jquery.nicescroll": "^3.7.0",
     "@types/leaflet": "^1.2.8",
+    "@types/leaflet.markercluster": "^1.0.3",
     "@types/popper.js": "^1.11.0",
     "@types/proj4leaflet": "^1.0.5",
     "@types/requirejs": "^2.1.31",
