--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# webStorm
+.idea
+
 # exclude
 /lib
 /bower_components
